# Financial-Tracker-Alert

./: .gitignore  .replit  Financial_Tracker_Scoring_Logic_in Total.md  Financial_Tracker_v1.0.1_Instructions.md  README.md  Stage1_Emergency.md  Stage2_0_Instructions.md  Stage2_Instructions.md  Stage3_5_Instructions.md  Stage3_Instructions.md  TW_Financial_App_Reference.md  app.py  auth.py  financial_app_reference_notes by GPT.md  gunicorn.conf.py  implementation_status_v1.md  index.html  pnpm-lock.yaml  portfolio_scraper.py  pyproject.toml  replit.md  replit.nix  sync_from_github.py  telegram_alerts.py
.agents/: agent_assets_metadata.toml
artifacts/financial-dashboard/: index.html  package.json
dashboard/: app.py  data.db  jpy_scraper.py  sync_from_github.py
dashboard/.replit-artifact/: artifact.toml.tmp
dashboard/templates/: index.html
docs/corrections/: v1.0-jpy-basis-direction-correction.md
docs/decisions/: 2026-04-14-stage1-ig-oas.md  2026-04-14-stage1-inv-turkey-condition-hotfix.md  2026-04-14-stage1-layer2-emergency.md  2026-04-14-stage1-layer2-weight-correction.md  2026-04-14-stage1-lqd.md  2026-04-14-stage1-score-version-column.md  2026-04-14-stage1-single-b-oas.md  2026-04-14-stage1-telegram-inverse-turkey.md  2026-04-15-stage2-hyg-5day.md  2026-04-15-stage2-hyg-daily.md  2026-04-15-stage2-layer2-final-state.md  2026-04-15-stage2-single-b-series-id-fix.md  2026-04-15-stage2-stage1-validation.md  2026-04-17-stage2-0-jpy-infrastructure.md  (+7 more)
scripts/: analyze_cp_effr.py  analyze_jpy_distribution.py
templates/: index.html  login.html
(+4 files in other folders)
