[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "auth>=1.3.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "plotly>=6.6.0",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "werkzeug>=3.1.8",
]
